# Golf_5_OBD_Python

./: .gitignore  README.md  bug_reports.md  pyproject.toml  test_connection.py
src/golf_obd/: __init__.py  cli.py  connection.py  pids.py  reader.py
